# finance_scraper

./: .gitignore  Dockerfile  pyproject.toml
constituents/: constituents.py  load_sector_to_db.py  sp500_constituents.csv
input/: morningstar_ET_urls.csv  morningstar_FS_urls.csv
src/: api.py
src/invest_Ecalendar/: scraper.py
src/morningstar/: earnings_scraper.py
src/morningstar_FS/: morningstar_scraper.py
